# aws-opensearch-mcp-server

./: .gitignore  LICENSE  README.md  config.example.yaml  mcp_server.py  pyproject.toml
examples/: iam-policy.example.json  kiro-mcp.json
src/aws_opensearch_mcp/: __init__.py  aws_clients.py  config.py  mappings.py  security.py  server.py  service.py  service_base.py  service_cluster.py  service_diagnostics.py  service_indices.py
tests/: test_config.py  test_mappings.py  test_security.py  test_server.py
